_sass/layout/_sidebar.scss
/* ==========================================================================
   SIDEBAR
   ===============  display: table-cell;
  vertical-align: top;
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;======================================================= */

/*
   Default
   ========================================================================== */

.sidebar {
  -webkit-transform: translate3d(0, 0 , 0);
          transform: translate3d(0, 0 , 0);

  @include clearfix();
  margin-bottom: 1em;

  @media (orientation: portrait) {
    margin-top: 1em;
  }

  @media screen and (min-width: $sidebar-screen-min-width) {
    height: 100vh;
    overflow-y: auto;               // Add scrollbar if the sidebar is too long
    position: fixed;
    padding-top: $masthead-height;
    
    /* Add unified box styling only when sidebar is positioned on the side */
    background: var(--global-bg-color);
    border: 1px solid var(--global-border-color);
    border-radius: $border-radius;
    padding-left: 1.5em;
    padding-right: 1.5em;
    padding-bottom: 1.5em;
    box-shadow: $box-shadow;
    margin-left: 1em;
    margin-right: 1em;
  }

  @include breakpoint($large) {
    @include span(3 of 12);
    opacity: 1;
    -webkit-transition: opacity 0.2s ease-in-out;
            transition: opacity 0.2s ease-in-out;

    &:hover {
      opacity: 1;
    }
  }

  @include breakpoint($x-large) {
    max-width: 350px; /* Increased from $sidebar-link-max-width (250px) to match bio text width */
    padding-right: 0;
  }

  h2, h3, h4, h5, h6 {
    margin-bottom: 0;
    font-family: $sans-serif-narrow;
  }

  h3, h4 {
    font-size: $type-size-5;
  }

  p, li {
    font-family: $sans-serif;
    font-size: $type-size-6;
    line-height: 1.5;
  }

  img {
    width: 100%;
  }
// removed extra closing brace causing SCSS error

.sidebar__right {
  margin-bottom: 1em;

  @include breakpoint($large) {
    position: relative;
    float: right;
    width: $right-sidebar-width-narrow;
    margin-left: span(0.5 of 12);
    z-index: 10;
  }

  @include breakpoint($x-large) {
    width: $right-sidebar-width;
  }
}

/*
   Author profile and links
   ========================================================================== */

.author__avatar {
  display: table-cell;
  vertical-align: top;
  width: 36px;
  // set width only, for non-square avatars
  // height: 36px;

  @include breakpoint($large) {
    display: block;
    width: auto;
    height: auto;
    text-align: center; /* Center the avatar within the sidebar */
    margin-bottom: 1em;
  }

  img {
    max-width: 175px;
    border-radius: 50%;

    @include breakpoint($large) {
      padding: 0.3125rem;
      border: 1px solid var(--global-border-color);
      margin: 0 auto; /* Center the image */
      display: block;
    }
  }
}

.author__content {
  display: table-cell;
  vertical-align: top;
  padding-left: 15px;
  padding-right: 25px;
  line-height: 1;

  @include breakpoint($large) {
    display: block;
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    max-width: none; /* Ensure content uses full sidebar width */
    text-align: center; /* Center all content within the sidebar box */
  }
}

.author__name {
  margin: 0;

  @include breakpoint($large) {
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center; /* Center the name in the sidebar box */
  }
}
.sidebar .author__name {
  font-family: $sans-serif;
  font-size: $type-size-5;
}

.sidebar .author__desktop {
  display: none;
  @media screen and (min-width: 1024px) {
    display: block;
  }
}

.author__pronouns {
  margin: 0;

  @include breakpoint($large) {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

.author__bio {
  margin: 0;
  text-align: center;
  width: 100%; /* Ensure bio text uses full sidebar width */
  max-width: none; /* Remove any width constraints */

  @include breakpoint($large) {
    margin-top: 10px;
    margin-bottom: 20px;
    text-align: left; /* Left align bio text */
    padding: 0; /* Remove padding for better alignment */
  }
}

.author__urls-wrapper {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  font-family: $sans-serif;
  z-index: 10;
  position: relative;
  cursor: pointer;

  li:last-child {
    a {
      margin-bottom: 0;
    }
  }

  @include breakpoint($large) {
    display: block;
    text-align: left; /* Left align the contact info */
  }

  button {
    margin-bottom: 0;

    @include breakpoint($large) {
      display: none;
    }
  }
}

// Dropdown is hidden by default
.author__urls {
  display: none;
  position: absolute;
  left: 0;
  margin-top: 0.9375rem;
  padding: 0.625rem;
  list-style-type: none;
  border: 1px solid var(--global-border-color);
  border-radius: $border-radius;
  background: var(--global-bg-color);
  z-index: -1;
  box-shadow: 0 0 10px rgba(#000, 0.25);
  cursor: default;
}

// When open (display: block), ensure dropdown is on top
.author__urls[style*="display: block"],
.author__urls.open {
  z-index: 110000 !important;
}

  @include breakpoint($large) {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    border: 0;
    background: transparent;
    box-shadow: none;
    text-align: left; /* Ensure contact info is left aligned */
  }

  &:before {
    display: none !important;
  }

  &:after {
    display: none !important;
  }

  li {
    white-space: nowrap;
  }

  a {
    display: block;
    margin-bottom: 5px;
    padding-right: 5px;
    padding-top: 2px;
    padding-bottom: 2px;
    color: inherit;
    font-size: $type-size-5;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

